--- a/01-HTML-CSS/09-animations/group - Or Noa Etan/noa1.html
+++ b/01-HTML-CSS/09-animations/group - Or Noa Etan/noa1.html
@@ -50,19 +50,19 @@
                     <img src="Ref/2021-12-15 (3).png" alt="">
                 </div>
                 <div class="box">
-                   <P> Mo</P>
+                    <P> Mo</P>
                 </div>
                 <div class="box">
-                    <P>  Tu</P>
+                    <P> Tu</P>
                 </div>
                 <div class="box">
-                    <P>    We</P>
+                    <P> We</P>
                 </div>
                 <div class="box">
                     <P> Th</P>
                 </div>
                 <div class="box">
-                    <P>  Fr</P>
+                    <P> Fr</P>
                 </div>
             </div>
 
@@ -73,12 +73,12 @@
                         <div class="box-logo">
                             <i class="fas fa-basketball-ball"></i>
                         </div>
-                            <P class="logo"> Dribbble </P>
+                        <P class="logo"> Dribbble </P>
                     </li>
                     <li class="list__line">
-                       <div class="box">
+                        <div class="box">
                             <p> new post </p>
-                    </div>
+                        </div>
                         <div class="box">
                             <i class="fas fa-ellipsis-h"></i>
                         </div>
@@ -88,14 +88,14 @@
                 <ul class="list">
                     <li class="list__line">
                         <div class="box-log-blue">
-                          <h1> Bē </h1>
+                            <h1> Bē </h1>
                         </div>
-                            <P class="logo"> Behance </P>
+                        <P class="logo"> Behance </P>
                     </li>
                     <li class="list__line">
-                       <div class="box">
+                        <div class="box">
                             <p> fix cace </p>
-                    </div>
+                        </div>
                         <div class="box">
                             <i class="fas fa-ellipsis-h"></i>
                         </div>
@@ -107,12 +107,12 @@
                         <div class="box-logo">
                             <i class="fas fa-book"></i>
                         </div>
-                            <P class="logo"> Portfolio </P>
+                        <P class="logo"> Portfolio </P>
                     </li>
                     <li class="list__line">
-                       <div class="box">
-                            <p> nilson project </p>
-                    </div>
+                        <div class="box">
+                            <p> project </p>
+                        </div>
                         <div class="box">
                             <i class="fas fa-ellipsis-h"></i>
                         </div>
