--- a/01-HTML-CSS/09-animations/mishaschedule_v2/schedule.html
+++ b/01-HTML-CSS/09-animations/mishaschedule_v2/schedule.html
@@ -8,6 +8,7 @@
     <script src="https://kit.fontawesome.com/e87667ff79.js" crossorigin="anonymous"></script>
     <title>Schedule</title>
     <link rel="stylesheet" href="dist/style3.css">
+    <link rel="icon" href="img/favicon.ico" sizes="any">
 </head>
 
 <body>
