--- a/01-HTML-CSS/09-animations/mishaschedule_v2/Home.html
+++ b/01-HTML-CSS/09-animations/mishaschedule_v2/Home.html
@@ -7,7 +7,8 @@
     <title>Home</title>
     <link rel="stylesheet" href="dist/style3.css">
     <link href="http://fonts.cdnfonts.com/css/neue-haas-grotesk-display-pro" rel="stylesheet">    
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous"> 
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+    <link rel="icon" href="img/favicon.ico" sizes="any"> 
 </head>
 <body>
     <div class="shimon">
