--- a/01-HTML-CSS/09-animations/mishaschedule_v2/activities.html
+++ b/01-HTML-CSS/09-animations/mishaschedule_v2/activities.html
@@ -10,6 +10,7 @@
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <title>Activities</title>
     <link rel="stylesheet" href="dist/style3.css">
+    <link rel="icon" href="img/favicon.ico" sizes="any">
 </head>
 
 <body>
