--- a/01-HTML-CSS/09-animations/tamir/project-01/index.html
+++ b/01-HTML-CSS/09-animations/tamir/project-01/index.html
@@ -24,7 +24,9 @@
         <div class="main">
             <div class="main__header">
                 <div class="main__header--header">Explore</div>
-                <div class="main__header--search"><i class="fas fa-search"></i></div>
+                <div class="main__header--search">
+                    <a href="#"></a> <i class="fas fa-search"></i>
+                </div>
             </div>
 
             <div class="container">
@@ -32,8 +34,90 @@
 
                 <div class="main__cards">
                     <div class="main__card" onclick="flip(event)">
-                        <div class="front">
-                            <img src="https://i.pinimg.com/736x/41/db/7a/41db7abe6644b7893311d59fb9449dbc.jpg" alt="">
+                        <div class="front"
+                            style="background-image: url(https://i.pinimg.com/736x/41/db/7a/41db7abe6644b7893311d59fb9449dbc.jpg);">
+                            <div class="front__button">
+                                <button class="front__button--button">click</button>
+                            </div>
+                        </div>
+                        <div class="back">
+                            <div class="back__one">model </div>
+                            <div class="back__partition"></div>
+                            <div class="back__two">Lorem ipsum dolor sit amet consectetur.</div>
+                        </div>
+                    </div>
+                    <div class="main__card" onclick="flip(event)">
+                        <div class="front"
+                            style="background-image: url(https://i.pinimg.com/736x/bd/3a/52/bd3a5248b28cdab485d6f841ac6bdf58.jpg);">
+                            <div class="front__button">
+                                <button class="front__button--button">click</button>
+                            </div>
+                        </div>
+                        <div class="back">
+                            <div class="back__one">model </div>
+                            <div class="back__partition"></div>
+                            <div class="back__two">Lorem ipsum dolor sit amet consectetur.</div>
+                        </div>
+                    </div>
+                    <div class="main__card" onclick="flip(event)">
+                        <div class="front"
+                            style="background-image: url(https://i.pinimg.com/736x/2c/b1/b3/2cb1b3936f41e3831ecb9c2388eb71d1.jpg);">
+                            <div class="front__button">
+                                <button class="front__button--button">click</button>
+                            </div>
+                        </div>
+                        <div class="back">
+                            <div class="back__one">model </div>
+                            <div class="back__partition"></div>
+                            <div class="back__two">Lorem ipsum dolor sit amet consectetur.</div>
+                        </div>
+                    </div>
+                    <div class="main__card" onclick="flip(event)">
+                        <div class="front"
+                            style="background-image: url(https://i.pinimg.com/564x/9b/49/35/9b49358dba7b2f5c19136a3f6c618f73.jpg);">
+                            <div class="front__button">
+                                <button class="front__button--button">click</button>
+                            </div>
+                        </div>
+                        <div class="back">
+                            <div class="back__one">model </div>
+                            <div class="back__partition"></div>
+                            <div class="back__two">Lorem ipsum dolor sit amet consectetur.</div>
+                        </div>
+                    </div>
+                    <div class="main__card" onclick="flip(event)">
+                        <div class="front"
+                            style="background-image: url(https://i.pinimg.com/736x/ef/62/29/ef6229f59ad4f6826948615e4440ebc0.jpg);">
+                            <div class="front__button">
+                                <button class="front__button--button">click</button>
+                            </div>
+                        </div>
+                        <div class="back">
+                            <div class="back__one">model </div>
+                            <div class="back__partition"></div>
+                            <div class="back__two">Lorem ipsum dolor sit amet consectetur.</div>
+                        </div>
+                    </div>
+                    <div class="main__card" onclick="flip(event)">
+                        <div class="front"
+                            style="background-image: url(https://i.pinimg.com/736x/e2/79/3e/e2793e30e1198b45458183449ef55e0f.jpg);">
+
+                            <div class="front__button">
+                                <button class="front__button--button">click</button>
+                            </div>
+                        </div>
+                        <div class="back">
+                            <div class="back__one">model </div>
+                            <div class="back__partition"></div>
+                            <div class="back__two">Lorem ipsum dolor sit amet consectetur.</div>
+                        </div>
+                    </div>
+                    <div class="main__card" onclick="flip(event)">
+                        <div class="front"
+                            style="background-image: url(https://i.pinimg.com/736x/a4/7a/ba/a47aba03204277d73d5852a8df1f5249.jpg);">
+                            <div class="front__button">
+                                <button class="front__button--button">click</button>
+                            </div>
                         </div>
                         <div class="back">
                             <h1>This is the back</h1>
@@ -41,107 +125,93 @@
                     </div>
                     <div class="main__card" onclick="flip(event)">
                         <div class="front"
-                            style="background-image: url(https://i.pinimg.com/736x/bd/3a/52/bd3a5248b28cdab485d6f841ac6bdf58.jpg);">
-                            <!-- <img src="https://i.pinimg.com/736x/bd/3a/52/bd3a5248b28cdab485d6f841ac6bdf58.jpg" alt=""> -->
+                            style="background-image: url(https://i.pinimg.com/736x/68/f9/eb/68f9eb136727642c942e5c6aa0245f99.jpg);">
+                            <div class="front__button">
+                                <button class="front__button--button">click</button>
+                            </div>
                         </div>
                         <div class="back">
-                            <h1>This is the back</h1>
+                            <div class="back__one">model </div>
+                            <div class="back__partition"></div>
+                            <div class="back__two">Lorem ipsum dolor sit amet consectetur.</div>
                         </div>
                     </div>
                     <div class="main__card" onclick="flip(event)">
-                        <div class="front">
-                            <img src="https://i.pinimg.com/736x/2c/b1/b3/2cb1b3936f41e3831ecb9c2388eb71d1.jpg" alt="">
+                        <div class="front"
+                            style="background-image: url(https://i.pinimg.com/736x/62/ef/fb/62effb5c4dd2cfb433c4df75a37129d4.jpg);">
+                            <div class="front__button">
+                                <button class="front__button--button">click</button>
+                            </div>
                         </div>
                         <div class="back">
-                            <h1>This is the back</h1>
+                            <div class="back__one">model </div>
+                            <div class="back__partition"></div>
+                            <div class="back__two">Lorem ipsum dolor sit amet consectetur.</div>
                         </div>
                     </div>
                     <div class="main__card" onclick="flip(event)">
-                        <div class="front">
-                            <img src="https://i.pinimg.com/564x/9b/49/35/9b49358dba7b2f5c19136a3f6c618f73.jpg" alt="">
+                        <div class="front"
+                            style="background-image: url(https://i.pinimg.com/736x/96/f7/69/96f769a36977ff462b431efa33c7da0f.jpg);">
+                            <div class="front__button">
+                                <button class="front__button--button">click</button>
+                            </div>
                         </div>
                         <div class="back">
-                            <h1>This is the back</h1>
+                            <div class="back__one">model </div>
+                            <div class="back__partition"></div>
+                            <div class="back__two">Lorem ipsum dolor sit amet consectetur.</div>
                         </div>
                     </div>
                     <div class="main__card" onclick="flip(event)">
-                        <div class="front">
-                            <img src="https://i.pinimg.com/736x/ef/62/29/ef6229f59ad4f6826948615e4440ebc0.jpg" alt="">
+                        <div class="front"
+                            style="background-image: url(https://i.pinimg.com/736x/af/de/81/afde81388d3ae25fd4db8a47623d5a55.jpg);">
+                            <div class="front__button">
+                                <button class="front__button--button">click</button>
+                            </div>
                         </div>
                         <div class="back">
-                            <h1>This is the back</h1>
+                            <div class="back__one">model </div>
+                            <div class="back__partition"></div>
+                            <div class="back__two">Lorem ipsum dolor sit amet consectetur.</div>
                         </div>
                     </div>
                     <div class="main__card" onclick="flip(event)">
-                        <div class="front">
-                            <img src="https://i.pinimg.com/736x/e2/79/3e/e2793e30e1198b45458183449ef55e0f.jpg" alt="">
+                        <div class="front"
+                            style="background-image: url(https://i.pinimg.com/564x/14/5d/60/145d60ff8533f9f78ba1b87c777f45be.jpg);">
+                            <div class="front__button">
+                                <button class="front__button--button">click</button>
+                            </div>
                         </div>
                         <div class="back">
-                            <h1>This is the back</h1>
+                            <div class="back__one">model </div>
+                            <div class="back__partition"></div>
+                            <div class="back__two">Lorem ipsum dolor sit amet consectetur.</div>
                         </div>
                     </div>
                     <div class="main__card" onclick="flip(event)">
-                        <div class="front">
-                            <img src="https://i.pinimg.com/736x/a4/7a/ba/a47aba03204277d73d5852a8df1f5249.jpg" alt="">
+                        <div class="front"
+                            style="background-image: url(https://i.pinimg.com/736x/d5/9f/d5/d59fd58bae50070bf1f08e8cfa82cd6f.jpg);">
+                            <div class="front__button">
+                                <button class="front__button--button">click</button>
+                            </div>
                         </div>
                         <div class="back">
-                            <h1>This is the back</h1>
+                            <div class="back__one">model </div>
+                            <div class="back__partition"></div>
+                            <div class="back__two">Lorem ipsum dolor sit amet consectetur.</div>
                         </div>
                     </div>
                     <div class="main__card" onclick="flip(event)">
-                        <div class="front">
-                            <img src="https://i.pinimg.com/736x/68/f9/eb/68f9eb136727642c942e5c6aa0245f99.jpg" alt="">
+                        <div class="front"
+                            style="background-image: url(https://i.pinimg.com/564x/e9/33/c9/e933c98ac5af117c251c564ad7714dd0.jpg);">
+                            <div class="front__button">
+                                <button class="front__button--button">click</button>
+                            </div>
                         </div>
                         <div class="back">
-                            <h1>This is the back</h1>
-                        </div>
-                    </div>
-                    <div class="main__card" onclick="flip(event)">
-                        <div class="front">
-                            <img src="https://i.pinimg.com/736x/62/ef/fb/62effb5c4dd2cfb433c4df75a37129d4.jpg" alt="">
-                        </div>
-                        <div class="back">
-                            <h1>This is the back</h1>
-                        </div>
-                    </div>
-                    <div class="main__card" onclick="flip(event)">
-                        <div class="front">
-                            <img src="https://i.pinimg.com/736x/96/f7/69/96f769a36977ff462b431efa33c7da0f.jpg" alt="">
-                        </div>
-                        <div class="back">
-                            <h1>This is the back</h1>
-                        </div>
-                    </div>
-                    <div class="main__card" onclick="flip(event)">
-                        <div class="front">
-                            <img src="https://i.pinimg.com/736x/af/de/81/afde81388d3ae25fd4db8a47623d5a55.jpg" alt="">
-                        </div>
-                        <div class="back">
-                            <h1>This is the back</h1>
-                        </div>
-                    </div>
-                    <div class="main__card" onclick="flip(event)">
-                        <div class="front">
-                            <img src="https://i.pinimg.com/564x/14/5d/60/145d60ff8533f9f78ba1b87c777f45be.jpg" alt="">
-                        </div>
-                        <div class="back">
-                            <h1>This is the back</h1>
-                        </div>
-                    </div>
-                    <div class="main__card" onclick="flip(event)">
-                        <div class="front">
-                            <img src="https://i.pinimg.com/736x/d5/9f/d5/d59fd58bae50070bf1f08e8cfa82cd6f.jpg" alt="">
-                        </div>
-                        <div class="back">
-                            <h1>This is the back</h1>
-                        </div>
-                    </div>
-                    <div class="main__card" onclick="flip(event)">
-                        <div class="front" style="background-image: url();">
-                            <img src="https://i.pinimg.com/564x/e9/33/c9/e933c98ac5af117c251c564ad7714dd0.jpg" alt="">
-                        </div>
-                        <div class="back">
-                            <h1>This is the back</h1>
+                            <div class="back__one">model </div>
+                            <div class="back__partition"></div>
+                            <div class="back__two">Lorem ipsum dolor sit amet consectetur.</div>
                         </div>
                     </div>
                 </div>
@@ -149,63 +219,7 @@
             </div>
 
 
-            <!-- <div class="main__cards">
-                <div style="background-image: url(https://i.pinimg.com/736x/41/db/7a/41db7abe6644b7893311d59fb9449dbc.jpg);"
-                    class="main__card">
-                    <p>Lorem ipsum dolor sit amet.</p>
-                </div>
-                <div style="background-image: url(https://i.pinimg.com/736x/bd/3a/52/bd3a5248b28cdab485d6f841ac6bdf58.jpg);"
-                    class="main__card">
-                    <p>Lorem ipsum dolor sit amet.</p>
-                </div>
-                <div style="background-image: url(https://i.pinimg.com/736x/2c/b1/b3/2cb1b3936f41e3831ecb9c2388eb71d1.jpg);"
-                    class="main__card">
-                    <p>Lorem ipsum dolor sit amet.</p>
-                </div>
-                <div style="background-image: url(https://i.pinimg.com/564x/9b/49/35/9b49358dba7b2f5c19136a3f6c618f73.jpg);"
-                    class="main__card">
-                    <p>Lorem ipsum dolor sit amet.</p>
-                </div>
-                <div style="background-image: url(https://i.pinimg.com/736x/ef/62/29/ef6229f59ad4f6826948615e4440ebc0.jpg);"
-                    class="main__card">
-                    <p>Lorem ipsum dolor sit amet.</p>
-                </div>
-                <div style="background-image: url(https://i.pinimg.com/736x/e2/79/3e/e2793e30e1198b45458183449ef55e0f.jpg);"
-                    class="main__card">
-                    <p>Lorem ipsum dolor sit amet.</p>
-                </div>
-                <div style="background-image: url(https://i.pinimg.com/736x/a4/7a/ba/a47aba03204277d73d5852a8df1f5249.jpg);"
-                    class="main__card">
-                    <p>Lorem ipsum dolor sit amet.</p>
-                </div>
-                <div style="background-image: url(https://i.pinimg.com/736x/68/f9/eb/68f9eb136727642c942e5c6aa0245f99.jpg);"
-                    class="main__card">
-                    <p>Lorem ipsum dolor sit amet.</p>
-                </div>
-                <div style="background-image: url(https://i.pinimg.com/736x/62/ef/fb/62effb5c4dd2cfb433c4df75a37129d4.jpg);"
-                    class="main__card">
-                    <p>Lorem ipsum dolor sit amet.</p> -->
-            <!-- </div>
-        <div style="background-image: url(https://i.pinimg.com/564x/e9/33/c9/e933c98ac5af117c251c564ad7714dd0.jpg);"
-            class="main__card">
-            <p>Lorem ipsum dolor sit amet.</p>
-        </div>
-        <div style="background-image: url(https://i.pinimg.com/736x/d5/9f/d5/d59fd58bae50070bf1f08e8cfa82cd6f.jpg);"
-            class="main__card">
-            <p>Lorem ipsum dolor sit amet.</p>
-        </div>
-        <div style="background-image: url(https://i.pinimg.com/564x/14/5d/60/145d60ff8533f9f78ba1b87c777f45be.jpg);"
-            class="main__card">
-            <p>Lorem ipsum dolor sit amet.</p>
-        </div>
-        <div style="background-image: url(https://i.pinimg.com/736x/af/de/81/afde81388d3ae25fd4db8a47623d5a55.jpg);"
-            class="main__card">
-            <p>Lorem ipsum dolor sit amet.</p>
-        </div>
-        <div style="background-image: url(https://i.pinimg.com/736x/96/f7/69/96f769a36977ff462b431efa33c7da0f.jpg);"
-            class="main__card">
-            <p>Lorem ipsum dolor sit amet.</p>
-        </div> -->
+
 
         </div>
         <div class="main__box">
@@ -279,7 +293,7 @@
     </div>
 </body>
 <script>function flip(event) {
-        var element = event.currentTarget;
+        let element = event.currentTarget;
         if (element.className === "main__card") {
             if (element.style.transform == "rotateY(180deg)") {
                 element.style.transform = "rotateY(0deg)";
