--- a/02-JavaScript/06-typescript/Example/shani/index.html
+++ b/02-JavaScript/06-typescript/Example/shani/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
+    <div id="container">
+        <button id='btn'>Click Me!</button>
+    </div>
     <script src="dist/index.js"></script>
 </body>
 </html>
