--- a/02-JavaScript/07-DOM manipulations/Example/01-getting Elements/index.html
+++ b/02-JavaScript/07-DOM manipulations/Example/01-getting Elements/index.html
@@ -7,11 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="one">aa</div>
-    <div class="two">bb</div>
-    <input type="text" name="" id="theInput">
-    <input type="color" onchange="handleColor(event)">
-    <button id='theButton'>Full Screen</button>
-    <script src="index.js"></script>
+    <div id="theTarget" class="box">Target</div>
+    <div class="box">Box 1</div>
+    <div class="box">Box 2</div>
+    <p id='theParagraph' >Hi</p>
+<script src="index.js"></script>
 </body>
 </html>
