--- a/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/plantCard.html
+++ b/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/plantCard.html
@@ -8,9 +8,9 @@
     <title>Plant App</title>
     <link rel="stylesheet" href="dist/style.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="/dist/_dropAnimation.css">
-    <link rel="stylesheet" href="/dist/_heartAnimation.css">
-    <link rel="stylesheet" href="/dist/_sunAnimation.css">
+    <link rel="stylesheet" href="./dist/_dropAnimation.css">
+    <link rel="stylesheet" href="./dist/_heartAnimation.css">
+    <link rel="stylesheet" href="./dist/_sunAnimation.css">
 </head>
 
 <body>
