--- a/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/plantCard.html
+++ b/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/plantCard.html
@@ -18,10 +18,10 @@
 
         <div class="plantCard__header">
             <div class="plantCard__header--arrow">
-                <div class="material-icons">west</div>
+                <div class="material-icons"> <a href="mainpage.html"> west </a> </div>
             </div>
             <div class="plantCard__header--box">
-                <div class="material-icons">shopping_cart</div>
+                <div class="material-icons"> <a href="/cartpage.html"> shopping_cart </a> </div>
             </div>
 
         </div>
