--- a/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/plantCard.html
+++ b/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/plantCard.html
@@ -21,7 +21,7 @@
                 <div class="material-icons"> <a href="mainpage.html"> west </a> </div>
             </div>
             <div class="plantCard__header--box">
-                <div class="material-icons"> <a href="/cartpage.html"> shopping_cart </a> </div>
+                <div class="material-icons"> <a href="cartpage.html"> shopping_cart </a> </div>
             </div>
 
         </div>
