--- a/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/menu.html
+++ b/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/menu.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="dist/menu.css">
+  <link rel="stylesheet" href="dist/style.css">
   
 </head>
 
@@ -15,13 +15,13 @@
   <h1 class="text">plant's app</h1>
 
   <div class="wrapper">
-    <div class="item"><a href="exple.html"><img
+    <div class="item"><a href="mainpage.html"><img
           src="img/plant1.jpg"
           alt=""></a></div>
-    <div class="item"> <a href="exple.html"><img
+    <div class="item"> <a href="plantCard.html"><img
           src="img/plant2.jpg"
           alt=""></a></div>
-    <div class="item"> <a href="exple.html"><img
+    <div class="item"> <a href="cartpage.html"><img
           src="img/plant3.jpeg"
           alt=""></a></div>
   </div>
