--- a/01-HTML-CSS/09-animations/group - Or Noa Etan/monthly-tasks.html
+++ b/01-HTML-CSS/09-animations/group - Or Noa Etan/monthly-tasks.html
@@ -35,18 +35,17 @@
                 <nav class="hidden">
                     <ul>
                         <li><a href="home-Or.html"><i class="material-icons">home</i></a></li>
-                        <li><a href="info.html"><i class="material-icons md-40 white-color">email</i></a></li>
-                        <li><a href="noa1.html"><i class="material-icons white-color">pie_chart</i></a></li>
-                        <li id="monthly-tasks"><a href="monthly-tasks.html"><i
-                                    class="material-icons white-color">grid_view</i></a></li>
+                        <li id="info"><a href="info.html"><i class="material-icons md-40">email</i></a></li>
+                        <li><a href="noa1.html"><i class="material-icons">pie_chart</i></a></li>
+                        <li id="monthly-tasks"><a href="monthly-tasks.html"><i class="material-icons">grid_view</i></a>
+                        </li>
                     </ul>
                 </nav>
             </div>
             <div id="control__mytasks">
                 <h3 class="fancy">My Tasks</h3>
-                <div id="control__mytasks-square">
-                    <h3 data-task-count>9</h3>
-                </div>
+                <h3 id="control__mytasks-square">9
+                </h3>
             </div>
 
         </div>
@@ -214,7 +213,7 @@
                     <label for="box__expln-transp">What subject is it?</label>
                     <input type="text" name="box__expln-transp" id="box__expln-transp">
                 </div>
-                <button type="submit" id="submitButton"  >Click to save changes</button>
+                <button type="submit" id="submitButton">Click to save changes</button>
             </form>
         </div>
     </div>
