--- a/01-HTML-CSS/09-animations/mishaschedule_v2/schedule.html
+++ b/01-HTML-CSS/09-animations/mishaschedule_v2/schedule.html
@@ -38,7 +38,7 @@
 
             <div class="schetop__back">
 
-                <i class="fas fa-light fa-angle-left"></i>
+                <a href="url"><i class="fas fa-light fa-angle-left"></i></a>
 
             </div>
 
