--- a/02-JavaScript/07-DOM manipulations/Example/shani-HW/index.html
+++ b/02-JavaScript/07-DOM manipulations/Example/shani-HW/index.html
@@ -7,6 +7,20 @@
     <title>Document</title>
 </head>
 <body>
+    <div id="Greetings">
+        <h1><span id="welcome">welcome</span> <span id="shalom">shalom </span><span id="hola">hola</span></h1>
+        
+    </div>
+    <div id="path">
+        <div class="pacman"></div>
+        <div class="dot 1"></div>
+        <div class="dot 2"></div>
+        <div class="dot 3"></div>
+        <div class="dot 4"></div>
+        <div class="dot 5"></div>
+        <div class="dot 6"></div>
+        
+    </div>
     <script src="dist/index.js"></script>
 </body>
 </html>
