--- a/02-JavaScript/07-DOM manipulations/Etan HW/index.html
+++ b/02-JavaScript/07-DOM manipulations/Etan HW/index.html
@@ -9,7 +9,10 @@
     
 </head>
 <body>
-    <div class="hello" id="world"> hello world </div>
+    <div class="hello">
+        <h2 id="world"> hello world</h2> 
+        
+    </div>
     <h2 class="hello" id="man">hello man</h2>
 <div class="bye" id="man">bye man</div>
 <h3 class="bye" id="everyone">bye everyone</h3>
