--- a/02-JavaScript/06-typescript/Lior/index.html
+++ b/02-JavaScript/06-typescript/Lior/index.html
@@ -7,6 +7,14 @@
     <title>Document</title>
 </head>
 <body>
+    
+    <div id="item">Don't watch the new Matrix movie
+      <div class="animation">
+
+      </div>  
+
+    </div>
+
     <script src="dist\index.js">
     </script>
 </body>
